--- a/src/css/my/page/myPage.module.css
+++ b/src/css/my/page/myPage.module.css
@@ -5,12 +5,36 @@
 }
 
 
-
 /* mypage 왼쪽 컴포넌트 */
 .myPageLeftComponent {
+  display: flex;
+  flex-direction: column;
   width: 20%;
-  background-color: red;
   min-height: 89vh;
+}
+
+
+/* mypage 왼쪽 컴포넌트 이미지 스타일링 */
+.myPageLeftProfileImageComponent {
+  margin: 0 auto;
+  width:70%;
+  overflow:hidden;
+  height:20vh;
+  align-items: center;
+  justify-items: center;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+
+/* mypage 이미지 */
+.myPageLeftProfileImage {
+  border-image-width: 1px;
+  width:100%;
+  height:100%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 
