--- a/src/css/common/navbar/navbar.module.css
+++ b/src/css/common/navbar/navbar.module.css
@@ -1,11 +1,14 @@
 .navbar {
     width: 100%;
     background-color: white;
-    padding: 0px 9%;
+    /*padding: 0px 9%;*/
+    padding: 0px 1%;
 }
 
 .navelement{
     padding: 10px 0px;
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
 .navcontainer {
@@ -13,15 +16,16 @@
     justify-content: left;
     align-items: center;
     margin-top: 10px;
-    padding: 10px 10px 10px 15px;
+    /*padding: 10px 10px 10px 15px;*/
 }
 
 .mainlog {
     width: 20%;
     font-weight: 700;
-    font-size: 32px;
+    /*font-size: 32px;*/
+    font-size: 28px;
     font-family: 'Poppins', sans-serif;
-    margin-right: 20px; 
+    margin-right: 20px;
 }
 
 .mainlog a{
@@ -64,5 +68,6 @@
 }
 
 .navbarRightItem {
-    padding: 0 5% 0 5%;
+    padding: 0 0 0 10%;
+    /*padding: 0 5% 0 5%;*/
 }
