--- a/src/css/siteinfo/siteinfo.module.css
+++ b/src/css/siteinfo/siteinfo.module.css
@@ -1,7 +1,8 @@
 .siteinfo_con {
     display: flex;
     flex-wrap: wrap;
-    padding: 0px 9%;
+    /*padding: 0px 9%;*/
+    padding: 0px 1%;
 }
 
 .siteinfo_element_left {
