feat: change UI on mypage - 말줄임표 추가

--- a/src/css/my/page/mobile/writeBoard.mobile.module.css
+++ b/src/css/my/page/mobile/writeBoard.mobile.module.css
@@ -13,3 +13,12 @@
   margin: 0 auto;
   align-items: center;
 }
+
+
+.commonEllipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
