--- a/src/css/my/page/mobile/interestedBoard.mobile.module.css
+++ b/src/css/my/page/mobile/interestedBoard.mobile.module.css
@@ -14,3 +14,10 @@
   align-items: center;
 }
 
+.commonEllipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
