--- a/src/css/my/page/web/interestedBoard.web.module.css
+++ b/src/css/my/page/web/interestedBoard.web.module.css
@@ -12,3 +12,11 @@
   margin: 0 auto;
   align-items: center;
 }
+
+.commonEllipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
