feat: change right category ui on category
- category.module.css 수정
- image를 고정 값이 아닌 비율로 조정
- 높이가 500px로 고정 되어 고정 해제함

--- a/src/css/category/category.module.css
+++ b/src/css/category/category.module.css
@@ -58,7 +58,9 @@
 
 .image {
     width: 100%;
-    height: 500px;
+    /*height: 500px;*/
+    /*height: 20vh;*/
+    background-size: cover;
 }
 
 .content {
