--- a/src/css/category/category.module.css
+++ b/src/css/category/category.module.css
@@ -43,12 +43,16 @@
 
 .recipetitle{
     font-weight: bolder;
-    font-size: 26px;
+    font-size: 1.6em;
+    text-align: left;
     margin: 1% 0;
 }
 
 .descriptiontext{
     margin: 0;
+    color: #707070;
+    font-size: 0.9em;
+    text-align: left;
 }
 
 .image_container {
